k8s/apps/podinfo/overlays/staging/ingress.patch.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: podinfo
spec:
  tls:
    - hosts:
        - podinfo.${BURGDEV_HOST}
      secretName: traefik-local-tls
